--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,3 +1,3 @@
 option('mmap', type: 'boolean', value: true)
 option('compat', type: 'boolean', value: false)
-option('debug', type: 'boolean', value: false)
+option('gdbm_debug', type: 'boolean', value: false)
